# micro-neural-network

./: MODULE.bazel
kotlin/simple_ocr/src/main/kotlin/me/cgruber/dl/ocr/: BUILD.bazel  ocr.kt  ocrlib.kt
kotlin/simple_ocr/src/test/kotlin/me/cgruber/dl/ocr/: BUILD.bazel  LibOcrTest.kt
