load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")
load("//util:kt_jvm_proto.bzl", "kt_jvm_proto_library")

kt_jvm_library(
    name = "ocr_lib",
    srcs = glob(["*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_github_ajalt_clikt_clikt_jvm",
        "@maven//:org_jetbrains_kotlinx_kotlin_deeplearning_api",
        "@maven//:org_jetbrains_kotlinx_kotlin_deeplearning_dataset_jvm",
        "@maven//:org_jetbrains_kotlinx_kotlin_deeplearning_tensorflow",
    ],
)

kt_jvm_binary(
    name = "ocr",
    main_class = "me.cgruber.dl.ocr.OcrKt",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":ocr_lib",
        "@maven//:org_jetbrains_kotlinx_kotlin_deeplearning_impl_jvm",
    ],
)

#kt_jvm_proto_library(
#    name = "example_proto_kt",
#    visibility = ["//visibility:public"],
#    deps = [
#        "//protobuf",
#    ],
#)
